[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zon"
version = "1.0.0"
authors = [
  { name="Nuno Pereira", email="nunoafonso2002@gmail.com" },
]
description = "A Zod-like validation library for Python"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Naapperas/zon"
Issues = "https://github.com/Naapperas/zon/issues"

[tool.setuptools]
packages = ["zon"]