[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zon"
version = "3.0.1"
authors = [
  { name="Nuno Pereira", email="nunoafonso2002@gmail.com" },
]
maintainers = [
  { name="Nuno Pereira", email="nunoafonso2002@gmail.com" },
]
description = "A Zod-like validation library for Python"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "validators>0.28",
  "typing_extensions>4.12"
]

[project.optional-dependencies]
dev = [
  "black",
  "build",
  "pylint",
  "pytest",
  "pylint-pytest",
  "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/Naapperas/zon"
Issues = "https://github.com/Naapperas/zon/issues"

[tool.setuptools]
packages = ["zon"]

[tool.pytest.ini_options]
addopts = "--cov=zon --cov-report lcov"